--- a/_data/contact.yml
+++ b/_data/contact.yml
@@ -1,11 +1,25 @@
 #  The contact options.
 
 -
-  type: github
-  icon: 'fab fa-github'
+  type: facebook
+  icon: 'fab fa-facebook'
+  url: 'https://facebook.com/magicongame'
 -
   type: twitter
   icon: 'fab fa-twitter'
+
+#-
+#  type: reddit
+#  icon: 'fab fa-reddit'
+#  url: 'https://reddit.com/r/magicongame'
+-
+  type: telegram
+  icon: 'fab fa-telegram'
+  url: 'https://t.me/MagiConOfficial'
+-
+  type: discord
+  icon: 'fab fa-discord'
+  url: 'https://discord.gg/magicconnect'
 -
   type: email
   icon: 'fas fa-envelope'
